--- a/app/src/main/res/layout/bug_item.xml
+++ b/app/src/main/res/layout/bug_item.xml
@@ -1,42 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+    <com.google.developer.bugmaster.views.DangerLevelView
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:id="@+id/danger_level"
+
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/bug_danger" />
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/txtCommonName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="0dp"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        app:layout_constraintLeft_toRightOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        tools:text="friendlyNameBug" />
+        tools:text="friendlyNameBug"
+        tools:layout_editor_absoluteY="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/danger_level"
+        android:layout_marginLeft="8dp" />
 
     <TextView
         android:id="@+id/txtScientificName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="8dp"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintLeft_toRightOf="@+id/imageView"
-        tools:text="scientificNameBug" />
+        tools:text="scientificNameBug"
+        app:layout_constraintLeft_toRightOf="@+id/danger_level"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/danger_level"
+        android:layout_marginBottom="8dp" />
 
 </android.support.constraint.ConstraintLayout>
