--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -27,7 +27,7 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context="com.google.developer.bugmaster.features.DetailActivity">
+            tools:context="com.google.developer.bugmaster.features.main.DetailActivity">
 
             <ImageView
                 android:id="@+id/imgDetailBug"
