--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -32,7 +32,7 @@
             android:paddingEnd="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:orientation="vertical"
-            tools:context="com.google.developer.bugmaster.QuizActivity">
+            tools:context="com.google.developer.bugmaster.features.quiz.QuizActivity">
 
             <TextView
                 android:id="@+id/text_question"
